feat(proposals): add jdk.G1ConcurrentMarkInterrupt (#17) and jdk.G1FullGCEscalation (#18)
G1-specific log_info gap audit (pass 76) found two uncovered sites:

- jdk.G1ConcurrentMarkInterrupt (Propose, Medium priority): combines two
  log_info(gc,marking) sites in g1ConcurrentMark.cpp — abort at
  concurrent_cycle_end() line ~1282 and mark-stack overflow reset at
  G1CMTask::handle_abort() line ~2790. Single event with type discriminator
  ("abort"/"overflow_reset"). GCId available via GCIdMark in enclosing
  thread scope. ~20 lines; abort-reason enum deferred to follow-up.

- jdk.G1FullGCEscalation (Propose, High priority): three log_info(gc,ergo)
  sites in g1CollectedHeap.cpp all carry GCCause::_g1_compaction_pause,
  making them indistinguishable in jdk.GarbageCollection. Event adds
  escalationPath discriminator ("upgrade"/"compaction"/"maximal_compaction"),
  clearSoftRefs boolean, and allocationBytes (null on upgrade path).
  GCId requires emission from inside do_full_collection() after G1GCMark
  constructor; do_full_collection() signature needs escalationPath param.
  ~25 lines.